# neo-lrc-editor-app

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: generate-bundles-and-release.yml
doc/: Neo LRC Editor App 开发文档.md  user-manual.md
scripts/setup/windows/: setup.iss
src/: CMakeLists.txt  NeoLrcEditorAppConfig.cmake.in  main.cpp
src/Format/: LyricDocument.cpp  LyricDocument.h  LyricFormatIO.cpp  LyricFormatIO.h  LyricLine.cpp  LyricLine.h  LyricLine_p.h  TimeValidator.cpp  TimeValidator.h
src/Playback/: PlaybackController.cpp  PlaybackController.h
src/Script/: DocumentObject.cpp  DocumentObject.h  ItemObject.cpp  ItemObject.h
src/UI/: AdjustTimeDialog.cpp  AdjustTimeDialog.h  ImportDialog.cpp  ImportDialog.h  LyricEditorView.cpp  LyricEditorView.h  MainWindow.cpp  MainWindow.h  QuantizeDialog.cpp  QuantizeDialog.h  TimeSpinBox.cpp  TimeSpinBox.h
